Fix how the hello block looks on small screens

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,7 +13,3 @@ html {
   font-family: fonts.$system;
   background-color: colors.$gainsboro;
 }
-
-body {
-  margin: 0;
-}
