--- a/sass/_hello.scss
+++ b/sass/_hello.scss
@@ -1,11 +1,23 @@
 @use "fonts";
 
 .hello {
-  font-size: 5rem;
+  font-size: 3rem;
   font-family: fonts.$rubikDoodleShadow;
 
   margin: 0;
   line-height: 1;
 
-  min-width: max-content;
+  text-align: center;
+}
+
+@media screen and (min-width: 380px) {
+  .hello {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hello {
+    font-size: 5rem;
+  }
 }
